--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="logo-container">
                 <img src="Logo.png" alt="Logo de la empresa">
             </div>
-            <h2>Gestión de Incidencias Técnicas</h2>
+            <h2>Asistencia técnica DISAGRO</h2>
 
             <form id="soporteForm">
                 <label for="titulo">Título:</label>
