--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
 			    <option value="Problemas de rendimiento">Problemas de rendimiento</option>
 			    <option value="Datos incoherentes">Datos incoherentes</option>
 			    <option value="Otro">Otro</option>
+			<option value="Inconsistencias en reportería">Inconsistencias en reportería</option>
+				<option value="Problemas de seguridad">Problemas de seguridad</option>
+			    <option value="Manejo de inventarios">Manejo de inventarios</option>
 			    <option value="Solicitud">Solicitud</option>
 			</select>
 
